<resources>
    <string name="app_name">FundooNote</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign in here</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="textview">TextView</string>
    <string name="welcome_you_are_logged_in">Welcome! you are logged in</string>
    <string name="name">Full Name</string>
    <string name="logout">Logout</string>
    <string name="phone">Phone</string>
    <string name="not_registered_sign_up_here">Not registered? Sign Up here</string>
    <string name="forgot_password_click_here">Forgot Password? Click here</string>
    <string name="already_registered_sign_in">Already registered? Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_registered">Already Registered? Sign in</string>
    <string name="profile">TODO</string>
    <string name="fundoo_notes">Fundoo Notes</string>
    <string name="archive">Archive</string>
    <string name="navigation_drawer_close" />
    <string name="navigation_drawer_open" />
    <string name="remainder">Remainder</string>
    <string name="notes">Notes</string>
    <string name="todo">TODO</string>
    <string name="floatingbutton">floatingButton</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="shows_title">Shows Title</string>
    <string name="shows_description">Shows Description</string>
    <string name="user_email">User Email</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="help_and_feedback">Help and Feedback</string>
    <string name="trash">Trash</string>
    <string name="profile_pic">Profile</string>
    <string name="button_to_change_rofile_picture">TODO</string>
    <string name="titleForEditNote">Title</string>
    <string name="search_notes">Search Notes</string>

    />
</resources>